--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ nav a{
 }
 
 .link {
-    font-size: 20px;
+    font-size: 1.5rem;
     padding-right: 10px;
     padding-left: 10px;
     color: white;
@@ -217,3 +217,49 @@ nav a{
         color: var(--red)
     }
 }
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.new {
+    font-size: 1.5rem;
+    padding: 1rem 3rem;
+    color: #f4f4f4;
+    text-transform: uppercase;
+}
+  
+.btn {
+    text-decoration: none;
+    border: 1px solid var(--red);
+    position: relative;
+    overflow: hidden;
+}
+  
+.btn:hover {
+    box-shadow: 1px 1px 25px 10px rgba(255, 0, 0, 0.4);
+}
+  
+.btn:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      120deg,
+      transparent,
+      rgba(194, 191, 201, 0.4),
+      transparent
+    );
+    transition: all 650ms;
+}
+  
+.btn:hover:before {
+    left: 100%;
+}
+  
+  
