finishing the basic functionality

--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,8 @@ nav a{
     padding: 1rem 3rem;
     color: #f4f4f4;
     text-transform: uppercase;
+    cursor: pointer;
+    user-select: none;
 }
   
 .btn {
